# gimbal_mani

./: CMakeLists.txt  package.xml
launch/: display.launch.py  gimbal_gazebo.launch.py
src/: gimbal_teleop_node.cpp  gimbal_visual_tracker_color_node.cpp  target_calculator.hpp  target_visualizer.cpp
urdf/: gimbal.sdf  gimbal.xacro
